@@ -479,61 +479,3 @@ void draw_page_limit(GtkWidget *area, gint x)
 		      x, score->height);
 }
 
-/* That will draw the extension needed for notes on staff */
-/* It's usefull when you need to see where the note is placed out from the staff */
-void draw_staff_extension(GtkWidget *area,Staff_t *staff, gint position, gdouble x)
-{
-	GdkGC *gc;
-	GdkColor color;
-
-	gint draw_dash_helper = 0;
-	gint i = 0;
-
-	gdouble extremity_end_y = 0;
-	extremity_end_y =  staff->extremity_begin_y +(staff->nb_lines - 1) * staff->space_btw_lines + staff->nb_lines - 1;
-
-
-	gc = gdk_gc_new(area->window);
-
-	color.red   = 00000;
-	color.green = 00000;
-	color.blue  = 00000;
-
-	gdk_colormap_alloc_color(gtk_widget_get_colormap(area), &color, TRUE, TRUE);
-	gdk_gc_set_foreground(gc, &color);
-
-	switch(staff->key) {
-	case NO_KEY:
-	case TREBLE_KEY:
-		if (position > 7) {
-			draw_dash_helper = position - 6;
-
-			for ( i = 1; i <= draw_dash_helper / 2; i ++ ) {
-				gdk_draw_line(area->window, gc,
-					      x - 4,
-					      staff->extremity_begin_y - (i * staff->space_btw_lines) - i,
-					      x + 13,
-					      staff->extremity_begin_y - (i * staff->space_btw_lines) - i);
-			}
-		}
-
-		if (position < -3) {
-
-			draw_dash_helper = position + 2;
-
-			draw_dash_helper = -draw_dash_helper;
-
-			for ( i = 1; i <= draw_dash_helper / 2; i++ ) {
-				gdk_draw_line(area->window, gc,
-					      x - 4,
-					      extremity_end_y + (i * staff->space_btw_lines) + i,
-					      x + 13,
-					      extremity_end_y + (i * staff->space_btw_lines) + i);
-			}
-		}
-
-
-
-		break;
-	}
-}
